Making parameter's group more visible. (Fixes issue 1270)

--- a/libgebr/gui/data/gebr-flow-review.css
+++ b/libgebr/gui/data/gebr-flow-review.css
@@ -34,6 +34,9 @@
 	font-weight: bold;
 }
 
+.param-group {
+	background: #f8f8f8;
+}
 .param-group .label {
 	padding-left: 30px;
 }
