--- a/libgebr/gui/data/gebr-report.css
+++ b/libgebr/gui/data/gebr-report.css
@@ -262,6 +262,9 @@ body {
 .parameters tbody .param {
 	color: #333333;
 }
+.parameters tbody .param-group {
+	background: #f8f8f8;
+}
 .parameters tbody .param-group .label {
 	padding-left: 30px;
 }
